--- a/dog-site/src/App.scss
+++ b/dog-site/src/App.scss
@@ -2,3 +2,12 @@
     width: 100%;
     height: 100%;
 }
+
+.cards {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    flex-wrap: wrap;
+    height: 35vh;
+    overflow: auto;
+}
