--- a/dog-site/src/components/Card/Card.scss
+++ b/dog-site/src/components/Card/Card.scss
@@ -1,8 +1,10 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 20%;
-    height: auto;
+    width: 300px;
+    height: 300px;
+    max-width: 40%;
+    max-height: auto;
     margin: 1rem;
     border-radius: 0.5rem;
   }
@@ -13,6 +15,10 @@
 
 .card__image {
     width: 100%;
+    height: 80%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
     border-radius: 0.5rem 0.5rem 0 0;
 }
 
