--- a/dog-site/src/components/Card/Card.scss
+++ b/dog-site/src/components/Card/Card.scss
@@ -7,6 +7,7 @@
     max-height: auto;
     margin: 1rem;
     border-radius: 0.5rem;
+    justify-content: space-between;
   }
 
 .card:hover {
@@ -24,4 +25,16 @@
 
 .card__title {
     text-align: center;
+}
+
+@media (max-width: 1150px) {
+    .cards {
+        justify-content: center;
+    }
+
+    .card {
+        width: 100%;
+        height: auto;
+        max-width: unset;
+    }
 }
