--- a/dog-site/src/components/Navbar/Navbar.scss
+++ b/dog-site/src/components/Navbar/Navbar.scss
@@ -1,10 +1,10 @@
 .navbar {
-    background: rgb(122,159,172);
     background: linear-gradient(90deg, rgba(122,159,172,1) 0%, rgba(206,220,224,1) 100%, rgba(0,212,255,1) 100%);
     display: flex;
     padding: 1rem;
     flex-wrap: wrap;
-    border-radius: 0.3rem;
+    width: auto;
+    height: auto;
 }
 
 .navbar__links {
@@ -43,4 +43,41 @@
     float: right;
     width: 560px;
     height: 315px;
+}
+
+@media (max-width: 1150px) {
+    .navbar {
+        display: block;
+        text-align: center;
+    }
+
+    .navbar__title {
+        margin-bottom: 0;
+    }
+
+    .navbar__links {
+        list-style-type: none;
+        display: flex;
+        padding-inline-start: 0;
+        margin-block-end: 0;
+        margin-block-start: 0;
+        width: 100%;
+        justify-content: center;
+    }
+
+    .navbar__content {
+        justify-content: center;
+    }
+
+    .content__left {
+        width: 100%;
+    }
+
+    .content__right {
+        width: 100%;
+    }
+
+    .right__video {
+       width: 100%;
+    }
 }
