--- a/dog-site/src/components/Navbar/Navbar.scss
+++ b/dog-site/src/components/Navbar/Navbar.scss
@@ -18,6 +18,10 @@
     padding: 1rem;
 }
 
+.navbar__link:hover {
+    cursor: pointer;
+}
+
 .navbar__title {
     align-self: center;
     color: white;
