--- a/dog-site/src/components/Card/Card.scss
+++ b/dog-site/src/components/Card/Card.scss
@@ -1,13 +1,12 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 300px;
-    height: 300px;
-    max-width: 40%;
-    max-height: auto;
+    width: 200px;
+    height: 250px;
     margin: 1rem;
     border-radius: 0.5rem;
     justify-content: space-between;
+    padding-bottom: 1rem;
   }
 
 .card:hover {
@@ -34,7 +33,6 @@
 
     .card {
         width: 100%;
-        height: auto;
         max-width: unset;
     }
 }
